--- a/AuctionService/AuctionService.csproj
+++ b/AuctionService/AuctionService.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+
+    <Company>GO Auctions</Company>
+    <Authors>MAMAK</Authors>
+
+    <Version>0.1.1</Version>
+    <Description>
+      Service handling actions.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
