--- a/DevEnv/docker-compose.yml
+++ b/DevEnv/docker-compose.yml
@@ -14,6 +14,26 @@ services:
     networks:
     - GOnet
 
+  loki:
+    image: grafana/loki
+    container_name: loki
+    ports:
+    - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    
+    networks:
+    - GOnet
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+    - "3000:3000"
+    
+    networks:
+    - GOnet
+    volumes:
+    - grafana_data:/var/lib/grafana
+
   mongodb:
     image: mongo:latest
     container_name: mongodb-dev
@@ -43,6 +63,8 @@ services:
 volumes:
   mongodb_data_container:
   images_data:
+    external: false
+  grafana_data:
     external: false
 
   
