in the middle of adding GetBidsByAuction to BidService (not finished)

--- a/BidServiceTest/BidServiceTest.csproj
+++ b/BidServiceTest/BidServiceTest.csproj
@@ -9,12 +9,25 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
+  <Company>GO Auctions</Company>
+  <Authors>MAMAK</Authors>
+
+  <Version>0.1.1</Version>
+  <Description>
+    Test project for BidService
+  </Description>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="moq" Version="4.20.70" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BidService\BidService.csproj" />
   </ItemGroup>
 
 </Project>
