--- a/BidService/BidService.csproj
+++ b/BidService/BidService.csproj
@@ -4,7 +4,16 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+
+    <Company>GO Auctions</Company>
+    <Authors>MAMAK</Authors>
+
+    <Version>0.1.1</Version>
+    <Description>
+      Service handling actions.
+    </Description>
   </PropertyGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
