--- a/AuctionService/AuctionService.csproj
+++ b/AuctionService/AuctionService.csproj
@@ -16,6 +16,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
+    <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.22.0" />
     <PackageReference Include="NLog" Version="5.2.6" />
     <PackageReference Include="NLog.Targets.Loki" Version="2.1.1" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
