--- a/AuctionService/NLog.config
+++ b/AuctionService/NLog.config
@@ -17,7 +17,7 @@
         <target name="loki" xsi:type="loki"
             batchSize="200"
             taskDelayMilliseconds="500"
-            endpoint="http://loki:3100"
+            endpoint="http://localhost:3100"
             username=""
             password=""
             orderWrites="true"
@@ -26,6 +26,7 @@
             <label name="app" layout="monitoring" />
             <label name="server" layout="${hostname:lowercase=true}" />
         </target>
+
     </targets>
     <rules>
         <logger name="*" minlevel="Debug" writeTo="logfile" />
