--- a/AuctionService/appsettings.json
+++ b/AuctionService/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "DatabaseName": "GODatabase",
+    "AuctionCollection": "auctions",
+    "MongoConnectionString": "mongodb://localhost:27017/GODatabase"
+  }
 }
