--- a/AuctionService/appsettings.json
+++ b/AuctionService/appsettings.json
@@ -9,6 +9,6 @@
   "MongoDBSettings": {
     "DatabaseName": "GODatabase",
     "AuctionCollection": "auctions",
-    "MongoConnectionString": "mongodb://localhost:27017/GODatabase"
+    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
   }
 }
