--- a/ItemService/appsettings.Development.json
+++ b/ItemService/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "DatabaseName": "GODatabase",
+    "ItemCollection": "items",
+    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
   }
 }
