--- a/ItemService/appsettings.json
+++ b/ItemService/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "DatabaseName": "GODatabase",
+    "ItemCollection": "items",
+    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
+  }
 }
