--- a/BidService/appsettings.Development.json
+++ b/BidService/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "DatabaseName": "GODatabase",
+    "BidCollection": "bids",
+    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
   }
 }
