--- a/BidService/appsettings.json
+++ b/BidService/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "DatabaseName": "GODatabase",
+    "BidCollection": "bids",
+    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
+  }
 }
