--- a/ItemService/ItemService.csproj
+++ b/ItemService/ItemService.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="NLog" Version="5.2.7" />
     <PackageReference Include="nlog.web" Version="5.3.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
