--- a/.github/workflows/CustomerService_Release.yml
+++ b/.github/workflows/CustomerService_Release.yml
@@ -20,9 +20,9 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-#    - name: Install dependencies
-#      run: |
-#        dotnet add package ...
+    - name: Install dependencies
+      run: |
+        dotnet restore packages
     - name: Build
       run: dotnet build --no-restore
     - name: Test
