fixed on triggers for workflows

--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -5,10 +5,11 @@ name: .NET
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: 
+      - "develop"
     paths:
-      - 'AuctionService/**'
-      - 'AuctionService.Tests/**'
+      - AuctionService/**
+      - AuctionService.Tests/**
 
 jobs:
   build:
