--- a/.github/workflows/BidService_BuildDockerImage.yml
+++ b/.github/workflows/BidService_BuildDockerImage.yml
@@ -2,9 +2,10 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  paths:
-      - 'BidService/**'
+    branches: 
+      - "main"
+    paths:
+      - BidService/**
 
 jobs:
 
