--- a/.github/workflows/ItemService_Release.yml
+++ b/.github/workflows/ItemService_Release.yml
@@ -5,9 +5,10 @@ name: .NET
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: 
+      - "develop"
     paths:
-      - 'ItemService/**'
+      - ItemService/**
 
 jobs:
   build:
