--- a/.github/workflows/SaleService_Release.yml
+++ b/.github/workflows/SaleService_Release.yml
@@ -5,9 +5,10 @@ name: .NET
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: 
+      - "develop"
     paths:
-      - 'SaleService/**'
+      - SaleService/**
 
 jobs:
   build:
