--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -23,11 +23,14 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Install dependencies
+      working-directory: AuctionService
       run: |
         dotnet restore packages
     - name: Build
+      working-directory: AuctionService
       run: dotnet build --no-restore
     - name: Test
+      working-directory: AuctionService.Tests
       run: dotnet test --no-build --verbosity normal
     - name: Commit and push to main
       run: |
