--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - AuctionService/**
       - AuctionService.Tests/**
+      - .github/workflows/AuctionService_Release.yml
 
 jobs:
   build:
@@ -25,12 +26,13 @@ jobs:
     - name: Install dependencies
       working-directory: AuctionService
       run: |
-        dotnet add package MongoDB.Bson
-        dotnet add package MongoDB.Driver
-        dotnet add package NLog
-        dotnet add package NLog.Targets.Loki
-        dotnet add package NLog.Web.AspNetCore
-        dotnet add package Swashbuckle.AspNetCore
+        dotnet restore
+#        dotnet add package MongoDB.Bson
+#        dotnet add package MongoDB.Driver
+#        dotnet add package NLog
+#        dotnet add package NLog.Targets.Loki
+#        dotnet add package NLog.Web.AspNetCore
+#        dotnet add package Swashbuckle.AspNetCore
     - name: Build
       working-directory: AuctionService
       run: dotnet build --no-restore
