--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -23,13 +23,17 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    - name: Install dependencies
+    - name: Install dependencies for service
       working-directory: AuctionService
       run: |
         dotnet restore
     - name: Build Service
       working-directory: AuctionService
       run: dotnet build --no-restore
+    - name: Install dependencies for test
+      working-directory: AuctionServiceTest
+      run: |
+        dotnet restore
     - name: Build Test
       working-directory: AuctionServiceTest
       run: dotnet build --no-restore
