--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -44,5 +44,7 @@ jobs:
       run: |
         git config --global user.email "asnielsen789@gmail.com"
         git config --global user.name "asnielsen789"
-        git commit -am "automated release to main"
-        git push
+#        git commit -am "automated release to main"
+        git checkout main
+        git merge develop
+        
