--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -40,13 +40,18 @@ jobs:
     - name: Run Test
       working-directory: AuctionServiceTest
       run: dotnet test --no-build --verbosity normal
+    - name: Setup git user
+      run: |
+        git config --global user.email "asnielsen789@gmail.com"
+        git config --global user.name "asnielsen789"
+    - name: pull latest main
+      run: |
+        git pull origin main
     - name: Checkout to main
       uses: actions/checkout@v2
       with:
         ref: main
     - name: Commit and push to main
       run: |
-        git config --global user.email "asnielsen789@gmail.com"
-        git config --global user.name "asnielsen789"
         git merge origin/develop --allow-unrelated-histories
         
