--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -46,7 +46,7 @@ jobs:
         git config --global user.name "asnielsen789"
     - name: pull latest main
       run: |
-        git pull origin/main
+        git pull origin main
     - name: Checkout to main
       uses: actions/checkout@v2
       with:
