--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -46,13 +46,14 @@ jobs:
         git config --global user.name "asnielsen789"
     - name: pull latest main
       run: |
-        git config pull.rebase true
-        git pull origin main
+        git fetch origin main
+#        git config pull.ff only
+#        git pull origin main
     - name: Checkout to main
       uses: actions/checkout@v2
       with:
         ref: main
     - name: Commit and push to main
       run: |
-        git merge origin/develop --allow-unrelated-histories
+        git merge origin develop --allow-unrelated-histories
         
