--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -46,8 +46,9 @@ jobs:
         git config --global user.name "asnielsen789"
     - name: pull latest main
       run: |
-        git config pull.ff only
-        git pull origin main
+#        git config pull.ff only
+        git merge origin main
+        git commit -am "automated release to main"
         git push
     - name: Checkout to main
       uses: actions/checkout@v2
