--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -46,6 +46,7 @@ jobs:
         git config --global user.name "asnielsen789"
     - name: pull latest main
       run: |
+        git status
         git merge main
         git commit -am "automated release to main"
         git push
