--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -46,6 +46,11 @@ jobs:
         git config --global user.name "asnielsen789"
     - name: pull latest main
       run: |
+        git branch
+        git branch -r
+        git fetch --all
+        git branch
+        git branch -r
         git status
         git merge main
         git commit -am "automated release to main"
