--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -52,7 +52,7 @@ jobs:
         git branch
         git branch -r
         git status
-        git merge origin/main
+        git merge origin/main --allow-unrelated-histories
         git commit -am "automated release to main"
         git push
     - name: Checkout to main
