--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -61,5 +61,5 @@ jobs:
         ref: main
     - name: Commit and push to main
       run: |
-        git merge develop --allow-unrelated-histories
+        git merge origin/develop --allow-unrelated-histories
         git push
