--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -55,11 +55,12 @@ jobs:
 #        git merge origin/main --allow-unrelated-histories
 #        git commit -am "automated release to main"
 #        git push
-    - name: Checkout to main
-      uses: actions/checkout@v2
-      with:
-        ref: main
-    - name: Commit and push to main
+#    - name: Checkout to main
+#      uses: actions/checkout@v2
+#      with:
+#        ref: main
+    - name: Create pull request #Commit and push to main
       run: |
-        git merge origin/develop --allow-unrelated-histories
-        git push
+        gh pr create -B main -H develop --title 'Merge develop into main' --body 'Created by Github action'
+#        git merge origin/develop --allow-unrelated-histories
+#        git push
