--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -63,6 +63,6 @@ jobs:
       run: |
         gh pr create -B main -H develop --title 'Merge develop into main' --body 'Created by Github action'
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #        git merge origin/develop --allow-unrelated-histories
 #        git push
