--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -40,11 +40,11 @@ jobs:
     - name: Run Test
       working-directory: AuctionServiceTest
       run: dotnet test --no-build --verbosity normal
-    - name: Setup git user
+    - name: Set up Git
       run: |
-        git config --global user.email "asnielsen789@gmail.com"
-        git config --global user.name "asnielsen789"
-    - name: Create a Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+    - name: create pull request
+      run: gh pr create -B main -H develop --title 'Merge develop into main branch' --body 'Created by Github action'
+      env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
