--- a/.github/workflows/AuctionService_Release.yml
+++ b/.github/workflows/AuctionService_Release.yml
@@ -47,4 +47,4 @@ jobs:
     - name: create pull request
       run: gh pr create -B main -H develop --title 'Merge develop into main branch' --body 'Created by Github action'
       env:
-          GH_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
