--- a/.github/workflows/BidService_Release.yml
+++ b/.github/workflows/BidService_Release.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - BidService/**
       - BidServiceTest/**
+      - .github/workflows/BidService_Release.yml
 
 jobs:
   build:
@@ -22,14 +23,28 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    - name: Install dependencies
+    - name: Install dependencies for service
+      working-directory: BidService
       run: |
-        dotnet restore packages
-    - name: Build
+        dotnet restore
+    - name: Build Service
+      working-directory: BidService
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-    - name: Commit and push to main
+    - name: Install dependencies for test
+      working-directory: BidServiceTest
       run: |
-        git commit -am "automated release to main"
-        git push
+        dotnet restore
+    - name: Build Test
+      working-directory: BidServiceTest
+      run: dotnet build --no-restore
+    - name: Run Test
+      working-directory: BidServiceTest
+      run: dotnet test --no-build --verbosity normal
+    - name: Set up Git
+      run: |
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+    - name: create pull request
+      run: gh pr create -B main -H develop --title 'Merge develop into main branch' --body 'Created by Github action'
+      env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
