--- a/.github/workflows/AuctionService_BuildDockerImage.yml
+++ b/.github/workflows/AuctionService_BuildDockerImage.yml
@@ -6,6 +6,11 @@ on:
       - "main"
     paths:
       - AuctionService/**
+  pull_request:
+    branches: 
+      - "main"
+    paths:
+      - AuctionService/**
 
 jobs:
 
