--- a/.github/workflows/AssessmentService_BuildDockerImage.yml
+++ b/.github/workflows/AssessmentService_BuildDockerImage.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Build the Docker image for AssessmentService
       run: docker build . --file AssessmentService/Dockerfile --tag assessmentservice-image:$(date +%s)
     - name: Push assessmentservice-image to DockerHub
-      run: docker push ${{secrets.DOCKER_USER}}/asnielsen789
+      run: docker push ${{secrets.DOCKER_USER}}/assessmentservice-image:$(date +%s)
