--- a/.github/workflows/CustomerService_BuildDockerImage.yml
+++ b/.github/workflows/CustomerService_BuildDockerImage.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Build the Docker image for CustomerService
       run: docker build . --file CustomerService/Dockerfile --tag customerservice-image:$(date +%s)
     - name: Push customerservice-image to DockerHub
-      run: docker push ${{secrets.DOCKER_USER}}/asnielsen789
+      run: docker push ${{secrets.DOCKER_USER}}/customerservice-image:$(date +%s)
