--- a/.github/workflows/SaleService_BuildDockerImage.yml
+++ b/.github/workflows/SaleService_BuildDockerImage.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Build the Docker image for SaleService
       run: docker build . --file SaleService/Dockerfile --tag saleservice-image:$(date +%s)
     - name: Push saleservice-image to DockerHub
-      run: docker push ${{secrets.DOCKER_USER}}/asnielsen789
+      run: docker push ${{secrets.DOCKER_USER}}/saleservice-image:$(date +%s)
