--- a/.github/workflows/AuctionService_BuildDockerImage.yml
+++ b/.github/workflows/AuctionService_BuildDockerImage.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a 
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -30,3 +30,6 @@ jobs:
       run: docker build . --file AuctionService/Dockerfile --tag auctionservice-image:$(date +%s)
     - name: Push auctionservice-image to DockerHub
       run: docker push ${{secrets.DOCKER_USER}}/auctionservice-image:$(date +%s)
+
+
+      
