--- a/.github/workflows/AuctionService_BuildDockerImage.yml
+++ b/.github/workflows/AuctionService_BuildDockerImage.yml
@@ -26,7 +26,7 @@ jobs:
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USER }} --password-stdin
+        docker login --username ${{ secrets.DOCKER_USER }} --password ${{ secrets.DOCKER_PASSWORD }} --password-stdin
     - name: Build the Docker image for AuctionService
       run: docker build . --file AuctionService/Dockerfile --tag auctionservice-image:$(date +%s)
     - name: Push auctionservice-image to DockerHub
