--- a/.github/workflows/AuctionService_BuildDockerImage.yml
+++ b/.github/workflows/AuctionService_BuildDockerImage.yml
@@ -11,6 +11,11 @@ on:
       - "main"
     paths:
       - AuctionService/**
+  push:
+    branches: 
+      - "develop"
+    paths:
+      - .github/workflows/AuctionService_BuildDockerImage.yml
 
 jobs:
 
@@ -23,10 +28,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Login to Docker Hub
       env:
-        username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: asnielsen789
+        password: TempPW901
       run: |
-        docker login --username ${{ secrets.DOCKER_USER }} --password-stdin ${{ secrets.DOCKER_PASSWORD }}
+        docker login --username asnielsen789 --password-stdin TempPW901
     - name: Build the Docker image for AuctionService
       run: docker build . --file AuctionService/Dockerfile --tag auctionservice-image:$(date +%s)
     - name: Push auctionservice-image to DockerHub
