workflow test for dockerbuild

--- a/.github/workflows/AuctionService_BuildDockerImage.yml
+++ b/.github/workflows/AuctionService_BuildDockerImage.yml
@@ -28,6 +28,6 @@ jobs:
       run: |
         docker login --username asnielsen789 --password TempPW901
     - name: Build the Docker image for AuctionService
-      run: docker build . --file AuctionService/Dockerfile --tag auctionservice-image:$(date +%s)
+      run: docker build . --file AuctionService/Dockerfile --tag auctionservice-image
     - name: Push auctionservice-image to DockerHub
-      run: docker push ${{secrets.DOCKER_USER}}/auctionservice-image:$(date +%s)
+      run: docker push ${{secrets.DOCKER_USER}}/auctionservice-image
