workflow test for dockerbuild

--- a/.github/workflows/AuctionService_BuildDockerImage.yml
+++ b/.github/workflows/AuctionService_BuildDockerImage.yml
@@ -22,11 +22,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Login to Docker Hub
-      env:
-        username: asnielsen789
-        password: TempPW901
       run: |
-        docker login --username asnielsen789 --password TempPW901
+        docker login --username ${{secrets.DOCKER_USER}} --password ${{secrets.DOCKER_PASSWORD}}
     - name: Build the Docker image for AuctionService
       run: |
         docker build . --file AuctionService/Dockerfile --tag asnielsen789/auctionservice:latest
