--- a/BidService/BidService.csproj
+++ b/BidService/BidService.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Mongodb.Driver" Version="2.22.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
   </ItemGroup>
 
 </Project>
