--- a/BidWorker/appsettings.json
+++ b/BidWorker/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "MongoDBSettings": {
+    "DatabaseName": "GODatabase",
+    "BidCollection": "bids",
+    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
   }
 }
