--- a/BidWorker/BidWorker.csproj
+++ b/BidWorker/BidWorker.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
   </ItemGroup>
  
 </Project>
