--- a/CustomerService/appsettings.json
+++ b/CustomerService/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "MongoDBSettings": {
     "DatabaseName": "GODatabase",
-    "ItemCollection": "customers",
+    "CustomerCollection": "customers",
     "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
   }
 }
