--- a/CustomerService/appsettings.Development.json
+++ b/CustomerService/appsettings.Development.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "MongoDBSettings": {
-    "DatabaseName": "GODatabase",
-    "CustomerCollection": "customers",
-    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
-  }
+  "AllowedHosts": "*"
 }
