updated workflows to trigger on pullrequest closed

--- a/.github/workflows/AssessmentService_BuildDockerImage.yml
+++ b/.github/workflows/AssessmentService_BuildDockerImage.yml
@@ -6,6 +6,8 @@ on:
       - "main"
     paths:
       - AssessmentService/**
+    types:
+      - closed
   push:
     branches: 
       - "develop"
