--- a/.github/workflows/CustomerService_BuildDockerImage.yml
+++ b/.github/workflows/CustomerService_BuildDockerImage.yml
@@ -6,6 +6,8 @@ on:
       - "main"
     paths:
       - CustomerService/**
+    types:
+      - [closed]
   push:
     branches: 
       - "develop"
@@ -30,4 +32,3 @@ jobs:
     - name: Push the Docker image for CustomerService
       run: |
         docker push asnielsen789/customerservice:latest
-        
