--- a/.github/workflows/CustomerService_BuildDockerImage.yml
+++ b/.github/workflows/CustomerService_BuildDockerImage.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - CustomerService/**
     types:
-      - [closed]
+      - closed
   push:
     branches: 
       - "develop"
