--- a/AzureEnv/nginx.conf
+++ b/AzureEnv/nginx.conf
@@ -4,9 +4,9 @@ events {
     worker_connections 1000;
 }
 http {
-    upstream assessmentservice {
-        server localhost:5000 max_fails=3 fail_timeout=10s;
-    }
+#    upstream assessmentservice {
+#        server localhost:5000 max_fails=3 fail_timeout=10s;
+#    }
 #    upstream auctionservice {
 #        server localhost:5001 max_fails=3 fail_timeout=10s;
 #    }
@@ -28,10 +28,11 @@ http {
 
     server {
         listen 80;
-        location /assessment {
-            proxy_pass http://assessmentservice;
-            proxy_next_upstream error timeout http_503;
-        }
+		root /etc/nginx/html;
+#		location /assessment {
+#            proxy_pass http://assessmentservice;
+#            proxy_next_upstream error timeout http_503;
+#        }
 #        location /auction {
 #            proxy_pass http://auctionservice;
 #            proxy_next_upstream error timeout http_503;
@@ -56,5 +57,8 @@ http {
 #            proxy_pass http://saleservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
+		location / {
+      		try_files $uri $uri/ $uri.html =404;
+    	}
     }
 }
