customer fixed for azure

--- a/AzureEnv/nginx.conf
+++ b/AzureEnv/nginx.conf
@@ -13,9 +13,9 @@ http {
 #    upstream bidservice {
 #        server localhost:5002 max_fails=3 fail_timeout=10s;
 #    }
-#    upstream customerservice {
-#        server localhost:5003 max_fails=3 fail_timeout=10s;
-#    }
+    upstream customerservice {
+        server localhost:5003 max_fails=3 fail_timeout=10s;
+    }
 #    upstream itemservice {
 #        server localhost:5004 max_fails=3 fail_timeout=10s;
 #    }
@@ -41,9 +41,9 @@ http {
 #            proxy_pass http://bidservice;
 #            proxy_next_upstream error timeout http_503;
 #        }
-#        location /customer {
-#            proxy_pass http://customerservice;
-#            proxy_next_upstream error timeout http_503;
+        location /customer {
+            proxy_pass http://customerservice;
+            proxy_next_upstream error timeout http_503;
 #        }
 #        location /item {
 #            proxy_pass http://itemservice;
