fix itemservice for azure

--- a/AzureEnv/nginx.conf
+++ b/AzureEnv/nginx.conf
@@ -16,9 +16,9 @@ http {
     upstream customerservice {
         server localhost:5003 max_fails=3 fail_timeout=10s;
     }
-#    upstream itemservice {
-#        server localhost:5004 max_fails=3 fail_timeout=10s;
-#    }
+    upstream itemservice {
+        server localhost:5004 max_fails=3 fail_timeout=10s;
+    }
 #    upstream legalservice {
 #        server localhost:5005 max_fails=3 fail_timeout=10s;
 #    }
@@ -44,11 +44,11 @@ http {
         location /customer {
             proxy_pass http://customerservice;
             proxy_next_upstream error timeout http_503;
-#        }
-#        location /item {
-#            proxy_pass http://itemservice;
-#            proxy_next_upstream error timeout http_503;
-#        }
+        }
+        location /item {
+            proxy_pass http://itemservice;
+            proxy_next_upstream error timeout http_503;
+        }
 #        location /legal {
 #            proxy_pass http://legalservice;
 #            proxy_next_upstream error timeout http_503;
