--- a/ItemService/appsettings.Development.json
+++ b/ItemService/appsettings.Development.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "MongoDBSettings": {
-    "DatabaseName": "GODatabase",
-    "ItemCollection": "items",
-    "MongoConnectionString": "mongodb://admin:1234@localhost:27018/"
-  }
+  "AllowedHosts": "*"
 }
